# airbyte

airbyte-integrations/connectors/source-amocrm-incremental/: .dockerignore  Dockerfile  README.md  acceptance-test-config.yml  main.py  metadata.yaml  pyproject.toml  setup.py
airbyte-integrations/connectors/source-amocrm-incremental/integration_tests/: configured_catalog.json  sample_state.json
airbyte-integrations/connectors/source-amocrm-incremental/source_amocrm_incremental/: __init__.py  run.py  source.py  spec.yaml
airbyte-integrations/connectors/source-amocrm-incremental/source_amocrm_incremental/schemas/: contacts.json  events.json  leads.json  pipelines.json  tasks.json  users.json
airbyte-integrations/connectors/source-amocrm-incremental/unit_tests/: test_incremental_streams.py  test_source.py  test_streams.py
airbyte-integrations/connectors/source-amocrm-incremental/unit_tests/integration/: test_leads.py
airbyte-integrations/connectors/source-amocrm/integration_tests/: configured_catalog.json
airbyte-integrations/connectors/source-facebook-marketing/: acceptance-test-config.yml
airbyte-integrations/connectors/source-vk-ads/: Dockerfile  README.md  acceptance-test-config.yml  build.gradle  main.py  setup.py
airbyte-integrations/connectors/source-vk-ads-2/: .dockerignore  Dockerfile  README.md  acceptance-test-config.yml  build.gradle  main.py  metadata.yaml  setup.py
airbyte-integrations/connectors/source-yandex-webmaster/: .dockerignore  Dockerfile  README.md  acceptance-test-config.yml  build.gradle  main.py  metadata.yaml  setup.py
(+38 files in other folders)
